--- a/bolixir/index.html
+++ b/bolixir/index.html
@@ -113,6 +113,14 @@
             </div>
         </div>
     </header>
+    <section class="intro">
+        <div class="img">
+
+        </div>
+        <div class="bglogo">
+            <img src="img/bglogo.svg" alt="logo">
+        </div>
+    </section>
 
 
 </body>
