--- a/bolixir/index.html
+++ b/bolixir/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> bolixir - botanical wine - Dry Farm Wines </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -117,8 +119,25 @@
         <div class="img">
 
         </div>
-        <div class="bglogo">
+        <div class="innerimg">
             <img src="img/bglogo.svg" alt="logo">
+            <p class="p1"> pure natural wine<br>infused with wild botanicals</p>
+            <p class="p2"> brought to you by Dry Farm Wines </p>
+            <button type="submit"> SHOP BOTANICAL WINE </button>
+            <div class="boxes">
+                <div class="box">
+                    <img src="img/sugar.svg">
+                    <p> Sugar Free </p>
+                </div>
+                <div class="box">
+                    <img src="img/alcohol.svg">
+                    <p> Ultra Low Alcohol<br><span>6-9% ABV </span></p>
+                </div>
+                <div class="box">
+                    <img src="img/botanical.svg">
+                    <p> Healthful Botanicals</p>
+                </div>
+            </div>
         </div>
     </section>
 
