--- a/bolixir/index.html
+++ b/bolixir/index.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> bolixir - botanical wine - Dry Farm Wines </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -126,19 +124,37 @@
             <button type="submit"> SHOP BOTANICAL WINE </button>
             <div class="boxes">
                 <div class="box">
-                    <img src="img/sugar.svg">
-                    <p> Sugar Free </p>
+                    <div>
+                        <img src="img/sugar.svg">
+                        <p> Sugar Free </p>
+                    </div>
                 </div>
                 <div class="box">
-                    <img src="img/alcohol.svg">
-                    <p> Ultra Low Alcohol<br><span>6-9% ABV </span></p>
+                    <div>
+                        <img src="img/alcohol.svg">
+                        <p> Ultra Low Alcohol<br><span>6-9% ABV </span></p>
+                    </div>
                 </div>
                 <div class="box">
-                    <img src="img/botanical.svg">
-                    <p> Healthful Botanicals</p>
+                    <div>
+                        <img src="img/botanical.svg">
+                        <p> Healthful Botanicals</p>
+                    </div>
                 </div>
             </div>
         </div>
+    </section>
+    <section class="second">
+        <div class="left">
+            <img src="img/fourbottles.png">
+        </div>
+        <div class="right">
+            <h1> bolixir - botanical wine </h1>
+            <p> Short for botanical elixir, bolixir is pure Natural Wine refreshingly infused with wild botanicals. Ultra-low alcohol, no sugar, and incredible taste. Discover the ingredients of our botanical infusions. </p>
+        </div>
+    </section>
+    <section class="third">
+
     </section>
 
 
