--- a/bolixir/index.html
+++ b/bolixir/index.html
@@ -149,8 +149,21 @@
             <img src="img/fourbottles.png">
         </div>
         <div class="right">
-            <h1> bolixir - botanical wine </h1>
-            <p> Short for botanical elixir, bolixir is pure Natural Wine refreshingly infused with wild botanicals. Ultra-low alcohol, no sugar, and incredible taste. Discover the ingredients of our botanical infusions. </p>
+            <div>
+                <h1> bolixir - botanical wine </h1>
+                <p> Short for botanical elixir, bolixir is pure Natural Wine refreshingly infused with wild botanicals.
+                    Ultra-low alcohol, no sugar, and incredible taste. Discover the ingredients of our botanical
+                    infusions. </p>
+                <h3> Choose Your Collection </h3>
+                <div>
+                    <p class="circle"> intro mix </p>
+                    <p class="circle"> classic </p>
+                    <p class="circle"> bubbles </p>
+                </div>
+                <h2> $ 117.00 </h2>
+                <p class="p2"> What's in the box? One bottle each of: Lavender Red, Dandelion White, Elderflower Bubbles and Rose Blossom Bubbles. </p>
+                <input type="button" value="ADD TO CART">
+            </div>
         </div>
     </section>
     <section class="third">
