--- a/self-portrait/index.html
+++ b/self-portrait/index.html
@@ -41,7 +41,9 @@
             <i class="fa-solid fa-user"></i>
             <i class="fa-solid fa-bag-shopping"></i>
         </div>
-        <div
+      </div>
+      <div class="logo"> 
+        <p> self-portrait </p>
       </div>
     </header>
   </body>
