--- a/self-portrait/index.html
+++ b/self-portrait/index.html
@@ -1,50 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <header>
-      <div class="left">
-        <a class="tab" href="#"> New Arrivals </a>
-        <a class="tab" href="#"> Modest </a>
-        <a class="tab" href="#"> Ready To Wear </a>
-        <a class="tab" href="#"> Wedding </a>
-        <a class="tab" href="#"> Footwear </a>
-        <a class="tab" href="#"> Exclusive </a>
-        <a class="tab" href="#"> Icons </a>
-        <a class="tab" href="#"> Kids </a>
-      </div>
-      <div class="right">
-        <div class="large">
-          <a class="tab" href="#"> Search </a>
-          <a class="tab" href="#"> Account </a>
-          <a class="tab" href="#"> Wishlist </a>
-          <div class="bag">
-            <a class="tab" href="#"> Bag </a>
-          </div>
-        </div>
-        <div class="medium">
-            <i class="fa-solid fa-heart"></i>
-            <i class="fa-solid fa-magnifying-glass"></i>
-            <i class="fa-solid fa-user"></i>
-            <i class="fa-solid fa-bag-shopping"></i>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Document</title>
+</head>
+
+<body>
+  <header>
+    <div class="left">
+      <a class="tab" href="#"> New Arrivals </a>
+      <a class="tab" href="#"> Modest </a>
+      <a class="tab" href="#"> Ready To Wear </a>
+      <a class="tab" href="#"> Wedding </a>
+      <a class="tab" href="#"> Footwear </a>
+      <a class="tab" href="#"> Exclusive </a>
+      <a class="tab" href="#"> Icons </a>
+      <a class="tab" href="#"> Kids </a>
+    </div>
+    <div class="right">
+      <div class="large">
+        <a class="tab" href="#"> Search </a>
+        <a class="tab" href="#"> Account </a>
+        <a class="tab" href="#"> Wishlist </a>
+        <div class="bag">
+          <a class="tab" href="#"> Bag </a>
         </div>
       </div>
-      <div class="logo"> 
-        <p> self-portrait </p>
+      <div class="medium">
+        <i class="fa-solid fa-heart"></i>
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <i class="fa-solid fa-user"></i>
+        <i class="fa-solid fa-bag-shopping"></i>
       </div>
-    </header>
-  </body>
+    </div>
+    <div class="logo">
+      <p> self-portrait </p>
+    </div>
+  </header>
+  <div class="mobile-header">
+    <div class="left">
+      <p> self-portrait </p>
+    </div>
+    <div class="right">
+      <i class="fa-solid fa-heart"></i>
+      <i class="fa-solid fa-magnifying-glass"></i>
+      <i class="fa-solid fa-user"></i>
+      <i class="fa-solid fa-bag-shopping"></i>
+    </div>
+  </div>
+  <section class="first">
+    <img src="img/yellow.jpg">
+    <div class="text">
+      <h1> SUNSHINE DREAMING </h1>
+      <p>Colour and sensuality are going to be the defining looks of this summer.
+        Don’t miss out on daring cut-outs and vivid prints.
+        Here are the styles that are going to be instant hits.
+      </p>
+      <a class="tab lol" href="#"> shop now </a>
+
+    </div>
+  </section>
+  <script defer src="script.js"></script>
+</body>
+
 </html>
